# NAVA-AI

./: .gitignore  ACCESSIBILITY_PLATFORM.md  ADAPTIVE_SAFETY.md  ADVANCED_FEATURES.md  AUTOMATION_COMPLETE.md  CERTIFICATION_COMPILER.md  COGNITIVE_SAFETY.md  COMPLETE_FEATURE_LIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DUAL_MODE_PLATFORM.md  FEATURES_COMPLETE.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_INTEGRATION.md  FINAL_PLATFORM_SUMMARY.md  GETTING_STARTED.md  GOD_MODE_PLATFORM.md  IRONCLAD_7D_VNC.md  IRONCLAD_EVOLUTION.md  LIVING_WORLD.md  MEMORY_OPTIMIZATION.md  MILITARY_NASA_GRADE.md  NAVΛ_BENCH.md  ORCHESTRATION_ENGINE.md  PATENT_DRAFT.md  PLATFORM_WEB_APP.md  PRODUCTION_CHECKLIST.md  QUICK_START.md  QUICK_WEBGL_BUILD.md  README.md  RESEARCH_PLATFORM.md  RUST_CORE_SUMMARY.md  RUST_UNITY_INTEGRATION.md  SCENE_SETUP_STATUS.md  SETUP_AND_PLAY_COMPLETE.md  SWARM_AGI_SYSTEM.md  SYSTEM_DIAGRAM.md  ULTIMATE_PLATFORM.md  UNITY_6_3_FEATURES.md  UNITY_SETUP_GUIDE.md  (+15 more)
Editor/: BuildWebGL.cs
nav_lambda_core/: .gitignore  Cargo.toml  README.md  build.bat
nav_lambda_core/src/: lib.rs
nav_lambda_server/: Cargo.toml  Dockerfile
nava-ai/: ALL_ERRORS_CLEARED.md  BURST_ERROR_FIX.md  ENTRY_POINT_DEBUG_FIXED.md  ENTRY_POINT_FIX.md  ERROR_ANALYSIS.md  FIXED_ENTRY_POINT.md  FIX_BURST_ASSEMBLY_ERROR.md  FIX_DIRECTORY_ERROR.md  FIX_UI_NAMESPACE_ERROR.md  PACKAGES_PROVIDED.md  PACKAGE_VERIFICATION.md  QUICK_FIX_BURST.md  QUICK_FIX_VIRTUALARTIFACTS.md  QUICK_REIMPORT_STEPS.md  QUICK_START_UI.md  QUICK_START_UNITY_CLOUD.md  ROS_TCP_CONNECTOR_FIX.md  ROS_TCP_CONNECTOR_REIMPORT_GUIDE.md  (+9 more)
(+123 files in other folders)
